--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         </license>
     </licenses>
     <properties>
-        <wicket.version>8.5.0</wicket.version>
+        <wicket.version>8.9.0</wicket.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- allowed values: R7, 1.0, 1.5, 2.0 or none -->
         <wtp.version>none</wtp.version>
@@ -74,9 +74,9 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
         </dependency>
 
         <!--  JUNIT DEPENDENCY FOR TESTING -->
